--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-admin",
+  "name": "vite-vue3-ts-element",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,9 +8,11 @@
     "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "element-plus": "^1.1.0-beta.18",
     "nprogress": "^0.2.0",
     "vue": "^3.2.6",
+    "vue-axios": "^3.3.7",
     "vue-router": "4",
     "vuex": "^4.0.2"
   },
@@ -27,8 +29,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.18.0",
+    "sass": "^1.42.1",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.2.2"
   }
 }
