--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "0.21.1",
     "element-plus": "^1.1.0-beta.18",
     "nprogress": "^0.2.0",
+    "sortablejs": "^1.14.0",
     "vue": "^3.2.6",
     "vue-axios": "^3.3.7",
     "vue-router": "4",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "wangeditor": "^4.7.8"
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
@@ -29,6 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.18.0",
+    "esri-loader": "^3.3.0",
     "sass": "^1.42.1",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
