--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix"
   },
   "dependencies": {
+    "@arcgis/core": "^4.21.2",
     "axios": "0.21.1",
     "element-plus": "^1.1.0-beta.18",
     "nprogress": "^0.2.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.18.0",
-    "esri-loader": "^3.3.0",
     "sass": "^1.42.1",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
