--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vite preview",
     "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix"
   },
-  "dependencies": {
-    "@arcgis/core": "^4.21.2",
+  "dependencies": {},
+  "devDependencies": {
     "axios": "0.21.1",
     "element-plus": "^1.1.0-beta.18",
     "nprogress": "^0.2.0",
@@ -17,11 +17,11 @@
     "vue-axios": "^3.3.7",
     "vue-router": "4",
     "vuex": "^4.0.2",
-    "wangeditor": "^4.7.8"
-  },
-  "devDependencies": {
+    "wangeditor": "^4.7.8",
+    "@arcgis/core": "^4.21.2",
     "@types/node": "^16.10.2",
     "@types/nprogress": "^0.2.0",
+    "@types/sortablejs": "^1.10.7",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "@vitejs/plugin-vue": "^1.6.1",
