--- a/package.json
+++ b/package.json
@@ -7,17 +7,10 @@
     "serve": "vite preview",
     "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue-draggable-next": "^2.1.1"
+  },
   "devDependencies": {
-    "axios": "0.21.1",
-    "element-plus": "^1.1.0-beta.18",
-    "nprogress": "^0.2.0",
-    "sortablejs": "^1.14.0",
-    "vue": "^3.2.6",
-    "vue-axios": "^3.3.7",
-    "vue-router": "4",
-    "vuex": "^4.0.2",
-    "wangeditor": "^4.7.8",
     "@arcgis/core": "^4.21.2",
     "@types/node": "^16.10.2",
     "@types/nprogress": "^0.2.0",
@@ -26,16 +19,25 @@
     "@typescript-eslint/parser": "^4.32.0",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
+    "axios": "0.21.1",
+    "element-plus": "^1.1.0-beta.18",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.18.0",
+    "nprogress": "^0.2.0",
     "sass": "^1.42.1",
+    "sortablejs": "^1.14.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
     "vite-plugin-eslint": "^1.3.0",
-    "vue-tsc": "^0.2.2"
+    "vue": "^3.2.6",
+    "vue-axios": "^3.3.7",
+    "vue-router": "4",
+    "vue-tsc": "^0.2.2",
+    "vuex": "^4.0.2",
+    "wangeditor": "^4.7.8"
   }
 }
