--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
+    // "allowJs": true,
+    // "esModuleInterop": true,
+    // "experimentalDecorators": true,
     "importHelpers": true,
-    // "isolatedModules": true,
+    "isolatedModules": true,
     "lib": ["esnext", "dom"],
     "jsx": "preserve",
     "module": "esnext",
