--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "npm run copy && vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix",
-    "copy": "ncp ./node_modules/@arcgis/core/assets ./public/assets",
-    "postinstall": "npm run copy"
+    "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix"
   },
   "dependencies": {
     "@types/lodash": "^4.14.178",
@@ -15,10 +13,15 @@
     "vue": "^3.2.6",
     "vue-draggable-next": "^2.1.1",
     "wangeditor": "^4.7.8",
-    "wti-form": "^1.1.6"
+    "wti-form": "^1.1.6",
+    "vue-axios": "^3.3.7",
+    "element-plus": "^1.1.0-beta.18",
+    "nprogress": "^0.2.0",
+    "vuex": "^4.0.2",
+    "vue-router": "4",
+    "sortablejs": "^1.14.0"
   },
   "devDependencies": {
-    "@arcgis/core": "^4.21.2",
     "@types/node": "^16.10.2",
     "@types/nprogress": "^0.2.0",
     "@types/sortablejs": "^1.10.7",
@@ -26,23 +29,16 @@
     "@typescript-eslint/parser": "^5.8.0",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
-    "element-plus": "^1.1.0-beta.18",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "ncp": "^2.0.0",
-    "nprogress": "^0.2.0",
     "sass": "^1.42.1",
-    "sortablejs": "^1.14.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
     "vite-plugin-eslint": "^1.3.0",
-    "vue-axios": "^3.3.7",
-    "vue-router": "4",
-    "vue-tsc": "^0.2.2",
-    "vuex": "^4.0.2"
+    "vue-tsc": "^0.2.2"
   }
 }
