--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     // "esModuleInterop": true,
     // "experimentalDecorators": true,
     "importHelpers": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "lib": ["esnext", "dom"],
     "jsx": "preserve",
     "module": "esnext",
