--- a/package.json
+++ b/package.json
@@ -3,42 +3,42 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "serve": "vite preview",
     "lint": "eslint ./src/**/*.{js,jsx,vue,ts,tsx} --fix"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.178",
-    "axios": "0.21.1",
-    "vue": "^3.2.6",
-    "vue-draggable-next": "^2.1.1",
-    "wangeditor": "^4.7.8",
-    "wti-form": "^1.1.6",
-    "vue-axios": "^3.3.7",
-    "element-plus": "^1.1.0-beta.18",
+    "axios": "^0.26.1",
+    "element-plus": "^2.1.0",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
+    "sortablejs": "^1.14.0",
+    "vue": "^3.2.31",
+    "vue-draggable-next": "^2.1.1",
+    "vue-router": "^4.0.14",
     "vuex": "^4.0.2",
-    "vue-router": "4",
-    "sortablejs": "^1.14.0"
+    "wangeditor": "^4.7.12",
+    "wti-form": "^1.1.8"
   },
   "devDependencies": {
-    "@types/node": "^16.10.2",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^17.0.21",
     "@types/nprogress": "^0.2.0",
     "@types/sortablejs": "^1.10.7",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "@vitejs/plugin-vue": "^1.6.1",
-    "@vue/compiler-sfc": "^3.2.6",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vue/compiler-sfc": "^3.2.31",
+    "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "sass": "^1.42.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.4",
+    "eslint-plugin-promise": "5.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "sass": "^1.49.9",
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
     "vite-plugin-eslint": "^1.3.0",
-    "vue-tsc": "^0.2.2"
+    "vue-tsc": "^0.32.1"
   }
 }
