--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.49.9",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
+    "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.32.1"
   }
