增加环境变量的使用

--- a/env/.env.local
+++ b/env/.env.local
@@ -1,7 +1,7 @@
 # 所有情况下都会加载，但会被 git 忽略
 
 # 标题
-VITE_APP_TITLE=这里是系统的名称
+VITE_APP_TITLE=这里是系统的名称local
 
 # 接口
 VITE_API_BASEURL=http://139.155.92.140:8081
