--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vite": "^2.8.6",
     "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-html": "^3.2.0",
     "vue-tsc": "^0.32.1"
   }
 }
