--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@element-plus/icons-vue": "^1.1.1",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
+    "echarts": "^5.3.1",
     "element-plus": "^2.1.0",
     "exceljs": "^4.3.0",
     "jquery": "^3.6.0",
@@ -24,6 +25,7 @@
     "sortablejs": "^1.14.0",
     "vue": "^3.2.31",
     "vue-draggable-next": "^2.1.1",
+    "vue-echarts": "^6.0.2",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2",
     "wangeditor": "^4.7.12",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/echarts": "^4.9.13",
     "@types/exceljs": "^1.3.0",
     "@types/jquery": "^3.5.14",
     "@types/js-cookie": "^3.0.1",
